images added to the beginning, different rendering implemented, slides pagination fixed

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <li></li>
       </ul>
       <div class="background"></div>
+      <div class="background-image">
+        <img class="back" />
+        <img class="front" />
+      </div>
       <ul class="text">
         <li></li>
         <li></li>
@@ -46,23 +50,23 @@
         <button type="button" value="4">4</button>
       </li>
       <li>
-        <button type="button" value="7">5</button>
+        <button type="button" value="5">5</button>
       </li>
       <li>
-        <button type="button" value="8">6</button>
+        <button type="button" value="7">6</button>
       </li>
       <li>
-        <button type="button" value="9">7</button>
+        <button type="button" value="10">7</button>
       </li>
       <li>
-        <button type="button" value="10">8</button>
+        <button type="button" value="13">8</button>
       </li>
       <li>
-        <button type="button" value="11">9</button>
-    </li>
-    <li>
-      <button type="button" value="12">10</button>
-  </li>
+        <button type="button" value="15">9</button>
+      </li>
+      <li>
+        <button type="button" value="16">10</button>
+      </li>
     </ul>
   </div>
   <script src="script.js"></script>
