refactoring and bug fixes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       @import url('https://fonts.googleapis.com/css?family=Open+Sans');
     </style> 
     <div class="hero">
-      <h1></h1>
-      <p></p>
+      <h1>Well-being and safety of women</h1>
+      <p>OSCE-LED survey on violence against women - major findings</p>
     </div>
     <div class="info-graph-container">
       <div class="rectangle base"></div>
@@ -26,10 +26,7 @@
         <li></li>
       </ul>
       <div class="background"></div>
-      <div class="background-image">
-        <img class="back" />
-        <img class="front" />
-      </div>
+      <img class="background-image" src="images/1.png" />
       <ul class="text">
         <li></li>
         <li></li>
@@ -38,7 +35,7 @@
     </div>
     <ul class="inline pagination">
       <li>
-        <button type="button" value="1">1</button>
+        <button type="button" value="1" class="active">1</button>
       </li>
       <li>
         <button type="button" value="2">2</button>
