--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       </button>
     </ul>
   </div>
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
