videos and cite box added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       <p>OSCE-LED survey on violence against women - major findings</p>
     </div>
     <div class="info-graph-container">
+      <div class="tooltip">
+        <div type="button" class="tooltip-button">
+          <span></span>
+        </div>
+        <div class="tooltip-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, recusandae.</div>
+      </div>
       <div class="rectangle base"></div>
       <ul class="rectangle active">
         <li></li>
@@ -190,6 +196,8 @@
         </svg>
       </button>
     </ul>
+    <p class="content"></p>
+    <div class="video"></div>
   </div>
   <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
   <script src="script.js"></script>
