style and content changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" id="atlo">
+  <div class="container" id="atlo"> 
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+      @import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
     </style> 
     <div class="hero">
       <h1>Well-being and safety of women</h1>
@@ -22,7 +23,7 @@
         <div type="button" class="tooltip-button">
           <span></span>
         </div>
-        <div class="tooltip-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, recusandae.</div>
+        <div class="tooltip-text"></div>
       </div>
       <div class="rectangle base"></div>
       <ul class="rectangle active">
@@ -196,8 +197,11 @@
         </svg>
       </button>
     </ul>
-    <p class="content"></p>
-    <div class="video"></div>
+    <div class="content">
+      <p></p>
+      <div class="video"></div>
+    </div>
+    <img src="images/OSCE_zarokep-01.jpg">
   </div>
   <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
   <script src="script.js"></script>
