--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" id="atlo"> 
+  <div class="container" id="atlo">
+    <ul class="preload">
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
