content text changed to have a title

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </button>
     </ul>
     <div class="content">
-      <p></p>
+      <div class="content-text"></div>
       <div class="video"></div>
     </div>
     <img src="images/OSCE_zarokep-01.jpg">
