image swapping made smoother

--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 </head>
 <body>
   <div class="container" id="atlo">
-    <ul class="preload">
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
@@ -37,7 +32,7 @@
         <li></li>
       </ul>
       <div class="background"></div>
-      <img class="background-image" src="images/1.png" />
+      <div class="background-image image-1"></div>
       <ul class="text">
         <li></li>
         <li></li>
