image swapping bug fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
   <div class="container" id="atlo">
+    <ul class="preload">
+      <li class="image-1"></li>
+      <li class="image-2"></li>
+      <li class="image-3"></li>
+    </ul>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Merriweather:700&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
