dummy text added

--- a/index.html
+++ b/index.html
@@ -203,8 +203,11 @@
       </button>
     </ul>
     <div class="content">
-      <div class="content-text"></div>
-      <div class="video"></div>
+      <div class="content-text"><h2>Lorem ipsum dolor sit</h2><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis aut quasi sit consequatur ut voluptate iure modi, possimus dignissimos assumenda inventore minima obcaecati architecto suscipit asperiores aperiam, repellat quis consectetur reiciendis ex distinctio ipsam qui saepe facere! Unde neque recusandae consequuntur fuga reiciendis tenetur, quas modi accusamus, nihil corporis ratione quod totam sunt amet atque sed harum, maxime ducimus consectetur alias illo! Non, velit optio numquam asperiores blanditiis consequuntur officiis dolorem nisi excepturi libero quo, doloribus ipsum laborum aperiam magni.</p></div>
+      <div class="video">
+      <video controls="">
+        <source src="videos/Valentina_Andrasek.mp4">
+      </video></div>
     </div>
     <img src="images/OSCE_zarokep-01.jpg">
   </div>
