rivers changing to percentage

--- a/index.html
+++ b/index.html
@@ -659,6 +659,7 @@
             d="m 1057,1287.62 v 259.94 a 40.12,40.12 0 0 1 -40,40 H 567.64 a 40.12,40.12 0 0 0 -40,40 v 310.07"
             stroke-miterlimit="10"
             id="path228"
+            class="left"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:41;stroke-miterlimit:10" />
           <path
@@ -845,24 +846,28 @@
             d="m 438.5,1937.63 v 79.48 a 40.12,40.12 0 0 1 -40,40 h -13.12 a 40.12,40.12 0 0 0 -40,40 v 138.19"
             stroke-miterlimit="10"
             id="path320"
+            class="left-2"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1272d;stroke-width:100;stroke-miterlimit:10" />
           <path
             d="m 517.72,1937.63 v 79.48 a 40.12,40.12 0 0 0 40,40 h 27.77 a 40.12,40.12 0 0 1 40,40 v 528.18 a 40.12,40.12 0 0 1 -40,40 h -18.66 a 40.12,40.12 0 0 0 -40,40 v 84.85"
             stroke-miterlimit="10"
             id="path322"
+            class="left"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1272d;stroke-width:60;stroke-miterlimit:10" />
           <path
             d="m 982.4,1937.63 v 355.23 a 40.12,40.12 0 0 0 40,40 h 557.84"
             stroke-miterlimit="10"
             id="path324"
+            class="right-2"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#fbaf17;stroke-width:250;stroke-miterlimit:10" />
           <path
             d="m 345.38,2221.3 v 71.56 a 40.12,40.12 0 0 1 -40,40 H -97.95"
             stroke-miterlimit="10"
             id="path326"
+            class="left-2"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1272d;stroke-width:100;stroke-miterlimit:10" />
           <text
@@ -888,6 +893,7 @@
             d="m 788.53,1937.63 v 722.66 a 5,5 0 0 0 5,5 h 249.58 a 5,5 0 0 1 5,5 v 119.85"
             stroke-miterlimit="10"
             id="path336"
+            class="right"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#fbaf17;stroke-width:150;stroke-miterlimit:10" />
           <text
