river animation improved, svg text changed to more relevant, only shown on hover

--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
             y2="1937.63"
             stroke-miterlimit="10"
             id="line176"
+            class="ukraine"
             style="fill:none;stroke:#fbaf17;stroke-width:100;stroke-miterlimit:10" />
           <path
             d="m 758,1287.62 v 58.11 a 40.12,40.12 0 0 0 40,40 h 102.19 a 40.12,40.12 0 0 1 40,40 v 511.9"
@@ -503,6 +504,7 @@
             d="m 864.29,1287.62 v 19.92 c 0,11 18,19.91 40,19.91 H 947 a 40.12,40.12 0 0 1 40,40 v 570.18"
             stroke-miterlimit="10"
             id="path180"
+            class="moldova"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#fbaf17;stroke-width:40;stroke-miterlimit:10" />
           <path
@@ -542,11 +544,13 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line196"
+            class="ukraine not-affected"
             style="fill:none;stroke:url(#a6ad2c66-f046-490f-9f42-e605f6057df5);stroke-width:100;stroke-miterlimit:10" />
           <path
             d="m 579,670.7 h 139 a 40.12,40.12 0 0 1 40,40 v 576.92"
             stroke-miterlimit="10"
             id="path198"
+            class="serbia not-affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:url(#linearGradient3587);stroke-width:60;stroke-miterlimit:10" />
           <line
@@ -556,11 +560,13 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line200"
+            class="moldova not-affected"
             style="fill:none;stroke:url(#e8cf26fe-0628-40b1-a012-07a23ca83b39);stroke-width:40;stroke-miterlimit:10" />
           <path
             d="M 596.93,774.32 H 657 a 40.12,40.12 0 0 1 40,40 v 473.3"
             stroke-miterlimit="10"
             id="path202"
+            class="kosovo not-affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:url(#aa76b8bd-e144-4e30-a228-2a7ff4e96005);stroke-width:40;stroke-miterlimit:10" />
           <line
@@ -570,6 +576,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line204"
+            class="macedonia not-affected"
             style="fill:none;stroke:url(#a7be003c-07b3-4be9-8a81-d630b2982ce6);stroke-width:40;stroke-miterlimit:10" />
           <line
             x1="567.51001"
@@ -578,6 +585,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line206"
+            class="albania not-affected"
             style="fill:none;stroke:url(#e96ef8b9-dce7-4462-bc3e-15d248f933ca);stroke-width:40;stroke-miterlimit:10" />
           <line
             x1="498.42999"
@@ -586,6 +594,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line208"
+            class="montenegro not-affected"
             style="fill:none;stroke:url(#a6f83caa-50e9-4243-8942-a1b2f0fe269b);stroke-width:30;stroke-miterlimit:10" />
           <line
             x1="406.32001"
@@ -594,6 +603,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line210"
+            class="bosnia not-affected"
             style="fill:none;stroke:url(#b9259d5e-2969-42b2-98c3-6625c45d6e4b);stroke-width:50;stroke-miterlimit:10" />
           <line
             x1="1057.04"
@@ -602,11 +612,13 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line212"
+            class="ukraine affected"
             style="fill:none;stroke:url(#linearGradient3589);stroke-width:41;stroke-miterlimit:10" />
           <path
             d="m 579,670.7 h 139 a 40.12,40.12 0 0 1 40,40 v 576.92"
             stroke-miterlimit="10"
             id="path214"
+            class="serbia affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:url(#e25ae56b-1423-4e2f-b92c-215cef7c0559);stroke-width:13;stroke-miterlimit:10" />
           <line
@@ -616,11 +628,13 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line216"
+            class="moldova affected"
             style="fill:none;stroke:url(#f9de3bf1-fdc6-4508-b881-379dfd0e369d);stroke-width:15;stroke-miterlimit:10" />
           <path
             d="M 596.93,774.32 H 657 a 40.12,40.12 0 0 1 40,40 v 473.3"
             stroke-miterlimit="10"
             id="path218"
+            class="kosovo affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:url(#b276e8d8-1c45-4762-9fa7-77857a4553c5);stroke-width:30;stroke-miterlimit:10" />
           <line
@@ -630,6 +644,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line220"
+            class="macedonia affected"
             style="fill:none;stroke:url(#b37c3e8e-6d38-48e0-97db-87c92abfe806);stroke-width:20;stroke-miterlimit:10" />
           <line
             x1="567.51001"
@@ -638,6 +653,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line222"
+            class="albania affected"
             style="fill:none;stroke:url(#f6cf2913-d0cc-420b-a83a-fb47ff16a232);stroke-width:10;stroke-miterlimit:10" />
           <line
             x1="498.42999"
@@ -646,6 +662,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line224"
+            class="montenegro affected"
             style="fill:none;stroke:url(#a636bfc1-9e3b-4eb7-9550-69f810344c86);stroke-width:5;stroke-miterlimit:10" />
           <line
             x1="406.32001"
@@ -654,12 +671,13 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line226"
+            class="bosnia affected"
             style="fill:none;stroke:url(#b013e4af-a80e-458d-8fbb-e70d4fb45e00);stroke-width:36;stroke-miterlimit:10" />
           <path
             d="m 1057,1287.62 v 259.94 a 40.12,40.12 0 0 1 -40,40 H 567.64 a 40.12,40.12 0 0 0 -40,40 v 310.07"
             stroke-miterlimit="10"
             id="path228"
-            class="left"
+            class="ukraine"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:41;stroke-miterlimit:10" />
           <path
@@ -713,116 +731,124 @@
             id="text244"
             style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto;fill:#ffffff">3 552 448</text>
           <text
-            transform="translate(1129.55,589.87)"
+            transform="translate(1108.55,589.87)"
             font-size="18"
             font-weight="700"
             id="text246"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="ukraine-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">14 998 738</text>
           <text
             transform="translate(1129.55,566.98)"
             font-size="18"
             id="text252"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="ukraine-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Ukraine
     </text>
           <text
-            transform="translate(896.37,589.87)"
+            transform="translate(888.37,589.87)"
             font-size="18"
             font-weight="700"
             id="text254"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="moldova-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">1 191 922</text>
           <text
             transform="translate(896.37,566.98)"
             font-size="18"
             id="text260"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="moldova-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Moldova
     </text>
           <text
-            transform="translate(660.38,632.94)"
+            transform="translate(640.38,632.94)"
             font-size="18"
             font-weight="700"
             id="text262"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="serbia-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">2 657 994</text>
           <text
             transform="translate(660.38,610.06)"
             font-size="18"
             id="text268"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="serbia-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Serbia
     </text>
           <text
-            transform="translate(310.14,777.16)"
+            transform="translate(310.14,800.16)"
             font-size="18"
             font-weight="700"
             id="text270"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="bosnia-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">1 335 698</text>
           <text
             transform="translate(312.91,754.28)"
             font-size="18"
             id="text276"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="bosnia-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Bosnia and 
+            <tspan x="-5" y="21.6" id="tspan312">Herzegovina</tspan>
     </text>
           <text
-            transform="translate(406.32,876.43)"
+            transform="translate(420.32,876.43)"
             font-size="18"
             font-weight="700"
             id="text278"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="montenegro-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">225 905</text>
           <text
             transform="translate(409.1,853.54)"
             font-size="18"
             id="text284"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="montenegro-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Montenegro
     </text>
           <text
-            transform="translate(477.49,977.56)"
+            transform="translate(466.49,977.56)"
             font-size="18"
             font-weight="700"
             id="text286"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="albania-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">1 038 287</text>
           <text
             transform="translate(480.27,954.68)"
             font-size="18"
             id="text292"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="albania-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Albania
     </text>
           <text
-            transform="translate(723.67,895.03)"
+            transform="translate(718.67,895.03)"
             font-size="18"
             font-weight="700"
             id="text294"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="kosovo-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">584 388</text>
           <text
             transform="translate(723.67,872.15)"
             font-size="18"
             id="text300"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Country
+            class="kosovo-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">Kosovo
     </text>
           <text
             transform="translate(670.29,1081.39)"
             font-size="18"
             font-weight="700"
             id="text302"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            class="macedonia-text text"
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">771 606</text>
           <text
-            transform="translate(670.29,1058.5)"
+            transform="translate(635.29,1058.5)"
             font-size="18"
             id="text308"
-            style="font-size:18px;font-family:Roboto-Regular, Roboto">Count<tspan
-      x="48.16"
-      y="0"
-      letter-spacing="0.01em"
-      id="tspan304"
-      style="letter-spacing:0.01em">r</tspan>
-    <tspan
-      x="54.619999"
-      y="0"
-      id="tspan306">y</tspan>
+            class="macedonia-text text"
+            style="font-size:18px;font-family:Roboto-Regular, Roboto">North Macedonia
     </text>
           <text
-            transform="translate(864.29,1796.05)"
+            transform="translate(845.29,1796.05)"
             font-size="18"
             font-weight="700"
             id="text310"
-            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">123 000</text>
+            style="font-weight:700;font-size:18px;font-family:Roboto-Bold, Roboto">19 252 089</text>
           <text
             transform="translate(851.83,1748.23)"
             font-size="18"
