country info only shown on hover

--- a/index.html
+++ b/index.html
@@ -677,43 +677,49 @@
             d="m 1057,1287.62 v 259.94 a 40.12,40.12 0 0 1 -40,40 H 567.64 a 40.12,40.12 0 0 0 -40,40 v 310.07"
             stroke-miterlimit="10"
             id="path228"
-            class="ukraine"
+            class="ukraine affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:41;stroke-miterlimit:10" />
           <path
             d="m 758,1287.62 v 177.51 a 40.12,40.12 0 0 1 -40,40 H 530.89 a 40.12,40.12 0 0 0 -40,40 v 392.5"
             stroke-miterlimit="10"
             id="path230"
+            class="serbia affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:13;stroke-miterlimit:10" />
           <path
             d="m 864.29,1287.62 v 218.29 a 40.12,40.12 0 0 1 -40,40 h -279.5 a 40.12,40.12 0 0 0 -40,40 v 351.72"
             stroke-miterlimit="10"
             id="path232"
+            class="moldova affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:15;stroke-miterlimit:10" />
           <path
             d="m 697,1287.62 v 129.79 a 40.12,40.12 0 0 1 -40,40 H 510 a 40.12,40.12 0 0 0 -40,40 v 440.22"
             stroke-miterlimit="10"
             id="path234"
+            class="kosovo affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:30;stroke-miterlimit:10" />
           <path
             d="m 643,1287.62 v 76 a 40.12,40.12 0 0 1 -40,40 H 486.19 a 40.12,40.12 0 0 0 -40,40 v 494"
             stroke-miterlimit="10"
             id="path236"
+            class="macedonia affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:20;stroke-miterlimit:10" />
           <path
             d="m 567.51,1287.62 v 40.9 a 40.12,40.12 0 0 1 -40,40 h -54.2 a 40.12,40.12 0 0 0 -40,40 v 529.11"
             stroke-miterlimit="10"
             id="path238"
+            class="albania affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:10;stroke-miterlimit:10" />
           <path
             d="m 498.43,1287.62 -4.1,18.48 c -2.25,10.16 -18.39,18.47 -35.86,18.47 -17.47,0 -31.76,18 -31.76,40 v 573.06"
             stroke-miterlimit="10"
             id="path240"
+            class="montenegro affected"
             inkscape:connector-curvature="0"
             style="fill:none;stroke:#c1282e;stroke-width:5;stroke-miterlimit:10" />
           <line
@@ -723,6 +729,7 @@
             y2="1287.62"
             stroke-miterlimit="10"
             id="line242"
+            class="bosnia affected"
             style="fill:none;stroke:#c1282e;stroke-width:36;stroke-miterlimit:10" />
           <text
             transform="translate(419,1809.68)"
@@ -785,7 +792,7 @@
             id="text276"
             class="bosnia-text text"
             style="font-size:18px;font-family:Roboto-Regular, Roboto">Bosnia and 
-            <tspan x="-5" y="21.6" id="tspan312">Herzegovina</tspan>
+            <tspan class="text" x="-5" y="21.6" id="tspan312">Herzegovina</tspan>
     </text>
           <text
             transform="translate(420.32,876.43)"
