new hero image added, slider changes

--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,8 @@
 <body>
   <div id="atlo">
     <div class="page active" id="page-1">
-      <img src="images/OSCE_zarokep-01.jpg" alt="">
       <div class="container">
+        <img src="images/faces.jpg" alt="" style="width: 100%;">
         <h2>OSCE-led Survey on the Well-being and Safety of Women</h2>
         <p>Do you know how many women and girls have experienced violence?</p>
         <p>We need reliable data to understand the impact of violence against women and girls on our communities and societes. Identifying the scale of a problem is a first step to tackling it at its root.</p>
