video controls added, margin removed

--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
           <path fill-rule="evenodd" clip-rule="evenodd" d="M6.96883 17.948C6.5783 17.5575 6.5783 16.9243 6.96883 16.5338L17.5338 5.96879C17.9244 5.57827 18.5575 5.57827 18.948 5.96879L19.0312 6.05198C19.4218 6.44251 19.4218 7.07567 19.0312 7.4662L8.46623 18.0312C8.0757 18.4217 7.44254 18.4217 7.05201 18.0312L6.96883 17.948Z" fill="#cccccc"></path>
         </svg>
       </button>
-      <video src=""></video>
+      <video src="" controls></video>
     </div>
   </div>
   <script src="script.js"></script>
