page pagination added, overlay icons placement changed

--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,77 @@
             </svg>
           </button>
         </ul>
+        <ul class="inline pagination-pages">
+          <li>
+            <ul>
+              <li><button type="button" value="0">1</button></li>
+              <li><button type="button" value="1">2</button></li>
+              <li><button type="button" value="2">3</button></li>
+            </ul>
+            <div>
+              <div>
+                <svg id="a1267a5d-56cb-4fcd-b7cf-4d896cc254ca" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120.33" height="112.4" viewBox="0 0 120.33 112.4"><defs><clipPath id="a99b5180-669d-471e-ae54-d2e944cb40b4" transform="translate(-3.8 -3.8)"><path d="M60,4.55a55.11,55.11,0,0,0-26.77,6.89,55.45,55.45,0,0,0,76,74A55.45,55.45,0,0,0,60,4.55Z" fill="none"/></clipPath></defs><title>01_perpetrators</title><circle cx="56.2" cy="56.2" r="55.45" fill="#fff"/><g clip-path="url(#a99b5180-669d-471e-ae54-d2e944cb40b4)"><line x1="15.33" y1="6.95" x2="119.58" y2="6.95" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="12.76" x2="119.58" y2="12.76" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="18.57" x2="119.58" y2="18.57" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="24.37" x2="119.58" y2="24.37" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="30.18" x2="119.58" y2="30.18" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="35.99" x2="119.58" y2="35.99" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="41.79" x2="119.58" y2="41.79" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="47.6" x2="119.58" y2="47.6" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="53.41" x2="119.58" y2="53.41" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="59.21" x2="119.58" y2="59.21" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="65.02" x2="119.58" y2="65.02" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="70.83" x2="119.58" y2="70.83" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="76.64" x2="119.58" y2="76.64" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/><line x1="15.33" y1="82.44" x2="119.58" y2="82.44" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5"/></g><circle cx="35.59" cy="92.38" r="5" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M109.32,85.43a55.47,55.47,0,0,1-76.2-73.82" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/><circle cx="56.2" cy="56.2" r="55.45" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/></svg>
+              </div>
+              <p>PERPETRATORS</p>
+            </div>
+          </li>
+          <li>
+            <ul>
+              <li><button type="button" value="3">4</button></li>
+              <li><button type="button" value="4">5</button></li>
+              <li><button type="button" value="5">6</button></li>
+              <li><button type="button" value="6">7</button></li>
+              <li><button type="button" value="7">8</button></li>
+              <li><button type="button" value="8">9</button></li>
+            </ul>
+            <div>
+              <div>
+                <svg id="bf1b3db1-1427-4995-93ff-e091647ae332" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="112.4" height="112.4" viewBox="0 0 112.4 112.4"><title>02_severity</title><circle cx="56.2" cy="56.2" r="55.45" fill="#fff"/><circle cx="56.2" cy="9.75" r="5" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="22.2" r="5" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="101.35" r="5" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="84.37" r="8.09" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="52.27" r="21.18" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="56.2" r="55.45" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/></svg>
+              </div>
+              <p>SEVERITY OF VIOLENCE</p>
+            </div>
+          </li>
+          <li>
+            <ul>
+              <li><button type="button" value="9">10</button></li>
+              <li><button type="button" value="10">11</button></li>
+              <li><button type="button" value="11">12</button></li>
+              <li><button type="button" value="12">13</button></li>
+            </ul>
+            <div>
+              <div>
+                <svg id="e2900a55-0d1e-472f-87f7-d8f2afb70b35" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="112.4" height="112.4" viewBox="0 0 112.4 112.4"><title>health_effects</title><circle cx="56.2" cy="56.2" r="55.45" fill="#fff"/><path d="M58.66,115.42A89.83,89.83,0,0,1,87.49,11.85,55.06,55.06,0,0,0,73.54,6.22,89.75,89.75,0,0,0,18.57,89c0,2.81.14,5.59.39,8.33A55.34,55.34,0,0,0,58.66,115.42Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M87.49,11.85A89.83,89.83,0,0,0,58.66,115.42c.45,0,.89,0,1.34,0" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M112.17,78.81A55.45,55.45,0,0,0,24.92,17.06,145.34,145.34,0,0,1,112.17,78.81Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M13.15,30.35A145.69,145.69,0,0,1,94.24,103.6a55.55,55.55,0,0,0,17.93-24.79A145.34,145.34,0,0,0,24.92,17.06,55.72,55.72,0,0,0,13.15,30.35Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M13.15,30.35A55.44,55.44,0,0,0,94.24,103.6,145.69,145.69,0,0,0,13.15,30.35Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/></svg>
+              </div>
+              <p>HEALTH <br> EFFECTS</p>
+            </div>
+          </li>
+          <li>
+            <ul>
+              <li><button type="button" value="13">14</button></li>
+              <li><button type="button" value="14">15</button></li>
+              <li><button type="button" value="15">16</button></li>
+              <li><button type="button" value="16">17</button></li>
+            </ul>
+            <div>
+              <div>
+                <svg id="f7decc2a-265a-4102-93f3-88b515e9d259" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="112.4" height="112.4" viewBox="0 0 112.4 112.4"><title>04_barriers</title><circle cx="56.2" cy="56.2" r="55.45" fill="#fff"/><circle cx="33.34" cy="61.03" r="8.09" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="53.76" cy="40.73" r="13.09" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="56.2" r="55.45" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M95.86,17.72A55.44,55.44,0,0,0,5.3,69.07,145,145,0,0,1,95.86,17.72Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M47,113.9c0-1.12-.07-2.24-.07-3.36a89.83,89.83,0,0,1,57.46-83.81,55.78,55.78,0,0,0-8.5-9A145,145,0,0,0,5.3,69.07,55.49,55.49,0,0,0,47,113.9Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M46.9,110.54c0,1.12,0,2.24.07,3.36A55.46,55.46,0,0,0,115.45,60a55.23,55.23,0,0,0-11.09-33.27A89.83,89.83,0,0,0,46.9,110.54Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/></svg>
+              </div>
+              <p>BARRIERS <br> TO REPORTING</p>
+            </div>
+          </li>
+          <li>
+            <ul>
+              <li><button type="button" value="17">18</button></li>
+              <li><button type="button" value="18">19</button></li>
+            </ul>
+            <div>
+              <div>
+                <svg id="b1db5b34-92e4-430e-80a6-8ccac2ae814e" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="112.4" height="112.4" viewBox="0 0 112.4 112.4"><title>05_partner_involved</title><circle cx="56.2" cy="56.2" r="55.45" fill="#fff"/><path d="M99.27,36.89A8.07,8.07,0,0,0,93.88,39a8.06,8.06,0,0,1,0,12,8.09,8.09,0,1,0,5.39-14.11Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M87.09,45a8.08,8.08,0,0,1,2.7-6,8.09,8.09,0,1,0,0,12A8.06,8.06,0,0,1,87.09,45Z" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M30.23,13.09A89.49,89.49,0,0,1,4.55,65.21" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M44.24,6a89.58,89.58,0,0,1,4.92,29.38A89.45,89.45,0,0,1,21.4,100.25" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><circle cx="56.2" cy="56.2" r="55.45" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M44.62,6.68A89.33,89.33,0,0,1,63,61.15a89.4,89.4,0,0,1-17,52.57" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M114.23,71.53c.1-.47.19-.93.28-1.41a88.94,88.94,0,0,0-20.69,5.55" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M110.91,82c.18-.42.36-.83.53-1.26a89.54,89.54,0,0,0-27.11-6" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M100.34,98c.92-1,1.79-2,2.64-3a90.24,90.24,0,0,0-24.3-24.16" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M87.93,107.91l.95-.57A89.2,89.2,0,0,0,71,59.24" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/><path d="M66.46,115.07c.53-.06,1.05-.13,1.58-.21A89.49,89.49,0,0,0,74,82.6a89.34,89.34,0,0,0-16.5-51.87" transform="translate(-3.8 -3.8)" fill="none" stroke="#1d1d1b" stroke-miterlimit="10" stroke-width="1.5"/></svg>
+              </div>
+              <p>CONFLICT <br> INVOLED <br> PARTNER</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="map-tooltip">lorem ipsum dolorem at</div>
