--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             </button>
           </li>
           <li class="more-margin-bottom">
-            <a href="https://violence-against-women.web.osce.org/results/DVT/" target="_blank">
+            <a href="https://www.osce.org/violence-against-women/" target="_blank">
               <img class="icon" src="icons/explorer_icon_01.gif" alt="">
               <p>Interactive Data Explorer</p>
             </a>
@@ -886,5 +886,6 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated"></script>
 </body>
 </html>
